2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkButton.h:	[Bug 2956548]: TkpButtonSetDefaults only
	* generic/tkButton.c:	initializes one button type
	* win/tkWinButton.c:
	* win/tkWinEmbed.c:	Fix various gcc warnings, all
	* win/tkWinMenu.c:	backported from Tk 8.6
	* win/tkWinPixmap.c:
	* win/tkWinSend.c:
	* win/tkWinTest.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/tkWinInt.h:	VC6++ does not have SPI_SETKEYBOARDCUES
	* win/.cvsignore:

2010-03-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (DumpLine): [Bug 2968379]: When peers are about,
	there can be unnamed marks present during a dump. Ignore them as they
	will just be for the peers' insert and current marks, which aren't
	very important.

2010-03-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/clipboard.n: Added note about STRING vs. UTF8_STRING types.

2010-02-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (TextEditCmd): [Bug 1799782]: Refix this, so that
        <<Modified>> events are issued when things change.

2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/installManPage: [Tcl Bug 2954638]: Correct behaviour of manual
	page installer. Also added armouring to check that assumptions about
	the initial state are actually valid (e.g., look for existing input
	file).

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags
	for threaded builds on OpenBSD.
	* configure: (regenerated).

2010-02-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkMenu.c: [Bug 2952745]: Defer TkMenuOptionTables cleanup to
	CallWhenDeleted() time, to ensure that the record doesn't get freed
	until after all widget instance commands have been deleted.

2010-02-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tkUnixWm.c       make TkSetTransientFor static

2010-02-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl Backport various formatting (spacing)